@@ -1,6 +1,8 @@
 1.5.7:
  * Rearranged the links on the left and right side of the wiki editing page
-   so the note title links have a little more horizontal breathing room.
+   so that the note title links have a little more horizontal breathing room.
+ * You can now add an existing note directly to the note tree, instead of
+   having to click "options" -> "show on startup".
  * Fixed a bug in which search result note summaries were not showing the
    portion of the note that matched the search term. (Luminotes Server)
 
